--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -1,3 +1,5 @@
+$onionPathLineColor: rgba(#7a7a7a, 0.6);
+
 .subtle {
   opacity: $session-subtle-factor;
 }
@@ -24,9 +26,7 @@
 
 input,
 textarea {
-  @include themify($themes) {
-    caret-color: themed('textColor') !important;
-  }
+  caret-color: var(--color-text) !important;
 }
 
 * {
@@ -38,9 +38,7 @@ textarea {
     user-select: text;
 
     &::selection {
-      @include themify($themes) {
-        background: themed('textHighlight');
-      }
+      background: var(--color-text-highlight);
     }
   }
 }
@@ -98,14 +96,10 @@ textarea {
   &.default,
   &.square,
   &.brand {
-    @include themify($themes) {
-      color: themed('foregroundPrimary');
-    }
+    color: var(--color-foreground-primary);
 
     &:not(.disabled):hover {
-      @include themify($themes) {
-        background: themed('clickableHovered');
-      }
+      background: var(--color-clickable-hovered);
     }
 
     &.green,
@@ -121,25 +115,19 @@ textarea {
     }
 
     &.green {
-      @include themify($themes) {
-        background-color: themed('accentButton');
-      }
+      background-color: var(--color-accent-button);
+      color: var(--color-text-opposite);
     }
 
     &.white {
-      @include themify($themes) {
-        color: themed('textColor');
-      }
+      color: var(--color-text);
     }
     &.primary {
-      @include themify($themes) {
-        background-color: themed('backgroundPrimary');
-      }
+      background-color: var(--color-background-primary);
+      color: white;
 
       .session-icon {
-        @include themify($themes) {
-          fill: themed('foregroundPrimary');
-        }
+        fill: var(--color-foreground-primary);
       }
     }
     &.secondary {
@@ -165,12 +153,10 @@ textarea {
     border: none;
 
     &.green {
-      @include themify($themes) {
-        @include transparent-background(themed('buttonGreen'));
-      }
+      @include transparent-background(var(--color-button-green));
     }
     &.white {
-      @include transparent-background($session-color-white);
+      @include transparent-background(var(--color-text));
     }
     &.primary {
       @include transparent-background($session-color-primary);
@@ -210,10 +196,8 @@ textarea {
     border-radius: 500px;
 
     &:not(.disabled):hover {
-      @include themify($themes) {
-        color: themed('textColor');
-        border-color: themed('textColor');
-      }
+      color: var(--color-text);
+      border-color: var(--color-text);
     }
   }
 
@@ -292,9 +276,7 @@ textarea {
   font-size: $session-font-md;
 
   &-text {
-    @include themify($themes) {
-      @include session-color-subtle(themed('textColor'));
-    }
+    @include session-color-subtle(var(--color-text));
 
     font-family: $session-font-default;
     font-weight: 300;
@@ -389,12 +371,6 @@ label {
   position: relative;
 }
 
-.module-left-pane-overlay {
-  h3 {
-    margin-bottom: 6px;
-  }
-}
-
 .hidden {
   display: none;
   visibility: hidden;
@@ -405,14 +381,11 @@ label {
 }
 
 .Toastify__toast {
-  @include themify($themes) {
-    background: rgba(themed('cellBackground'), 0.99);
-    color: themed('textColor');
-  }
+  background: var(--color-cell-background);
+  color: var(--color-text);
+
   .Toastify__close-button {
-    @include themify($themes) {
-      color: subtle(themed('textColor'));
-    }
+    color: subtle(var(--color-text));
   }
   @mixin set-toast-theme($color) {
     border-left: 4px solid $color;
@@ -431,9 +404,7 @@ label {
   }
 
   .Toastify__progress-bar {
-    @include themify($themes) {
-      background-color: rgba(themed('textColor'), 0.1);
-    }
+    background-color: rgba(var(--color-text), 0.1);
   }
 }
 
@@ -445,12 +416,11 @@ label {
   max-height: 70vh;
   max-width: calc(min(70vw, 800px));
   font-family: $session-font-default;
-  @include themify($themes) {
-    background-color: themed('modalBackground');
-    color: themed('textColor');
-    border: themed('sessionBorder');
-    box-shadow: themed('sessionShadow');
-  }
+  background-color: var(--color-modal-background);
+  color: var(--color-text);
+  border: var(--border-session);
+  box-shadow: var(--color-session-shadow);
+
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -542,6 +512,10 @@ label {
     &__center {
       display: flex;
       justify-content: center;
+
+      .session-button {
+        margin: $session-margin-xs;
+      }
     }
   }
 
@@ -630,27 +604,20 @@ label {
   z-index: 30;
   min-width: 200px;
   box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
-  @include themify($themes) {
-    background: themed('cellBackground');
-  }
+  background: var(--color-cell-background);
+
   .react-contexify__item {
-    @include themify($themes) {
-      background: themed('cellBackground');
-    }
+    background: var(--color-cell-background);
   }
 
   .react-contexify__item:not(.react-contexify__item--disabled):hover
     > .react-contexify__item__content {
-    @include themify($themes) {
-      background: themed('accent');
-      color: themed('textColorOpposite');
-    }
+    background: var(--color-accent);
+    color: var(--color-text-opposite);
   }
   .react-contexify__item__content {
     transition: $session-transition-duration;
-    @include themify($themes) {
-      color: themed('textColor');
-    }
+    color: var(--color-text);
   }
 
   &.react-contexify__submenu {
@@ -675,15 +642,11 @@ label {
     padding: 0px $session-margin-md;
     font-size: $session-font-sm;
 
-    @include themify($themes) {
-      color: themed('textColor');
-      background: themed('cellBackground');
-    }
+    color: var(--color-text);
+    background: var(--color-cell-background);
 
     &:hover {
-      @include themify($themes) {
-        background: themed('clickableHovered');
-      }
+      background: var(--color-clickable-hovered);
     }
   }
 
@@ -708,29 +671,22 @@ label {
     justify-content: center;
     height: 35px;
     padding: 0 $session-margin-md;
-    @include themify($themes) {
-      background: themed('cellBackground');
-      color: themed('textColor');
-    }
+    background: var(--color-cell-background);
+    color: var(--color-text);
+
     font-size: 0.8rem;
     width: -webkit-fill-available;
     transition: $session-transition-duration;
 
     &:first-child {
-      @include themify($themes) {
-        border-top: themed('sessionBorder');
-      }
+      border-top: var(--border-session);
     }
     &:last-child {
-      @include themify($themes) {
-        border-top: themed('sessionBorder');
-      }
+      border-top: var(--border-session);
     }
 
     &:hover {
-      @include themify($themes) {
-        background: themed('clickableHovered');
-      }
+      background: var(--color-clickable-hovered);
     }
 
     .session-icon {
@@ -742,9 +698,7 @@ label {
 
     &.active,
     &:hover {
-      @include themify($themes) {
-        background: themed('clickableHovered');
-      }
+      background: var(--color-clickable-hovered);
     }
 
     &.danger {
@@ -753,9 +707,8 @@ label {
   }
 
   &:hover {
-    @include themify($themes) {
-      background: themed('clickableHovered');
-    }
+    background: var(--color-clickable-hovered);
+
     .session-icon {
       opacity: 1;
     }
@@ -883,9 +836,8 @@ label {
     justify-content: center;
     align-items: center;
     height: $main-view-header-height;
-    @include themify($themes) {
-      background: themed('cellBackground');
-    }
+    background: var(--color-cell-background);
+
     &-title {
       line-height: $main-view-header-height;
       font-weight: bold;
@@ -905,11 +857,10 @@ label {
     padding: $session-margin-lg;
     margin-bottom: 20px;
 
-    @include themify($themes) {
-      background: themed('cellBackground');
-      color: themed('textColor');
-      border-bottom: themed('sessionBorder');
-    }
+    background: var(--color-cell-background);
+    color: var(--color-text);
+    border-bottom: var(--border-session);
+
     &.inline {
       display: flex;
       align-items: center;
@@ -931,16 +882,12 @@ label {
       font-size: $session-font-sm;
       font-weight: 100;
       max-width: 700px;
-      @include themify($themes) {
-        @include session-color-subtle(themed('textColor'));
-      }
+      @include session-color-subtle(var(--color-text));
     }
 
     &__content {
       label {
-        @include themify($themes) {
-          @include session-color-subtle(themed('textColor'));
-        }
+        @include session-color-subtle(var(--color-text));
       }
     }
     &__selection {
@@ -991,10 +938,9 @@ label {
       max-width: 90%;
       width: 600px;
 
-      @include themify($themes) {
-        background: themed('composeViewBackground');
-        color: themed('textColor');
-      }
+      background: var(--color-cell-background);
+      color: var(--color-text);
+
       border: 1px solid $session-shade-8;
       border-radius: 5px;
 
@@ -1005,10 +951,9 @@ label {
 
       input {
         width: 100%;
-        @include themify($themes) {
-          background: themed('inputBackground');
-          color: themed('textColor');
-        }
+        background: var(--color-input-background);
+        color: var(--color-text);
+
         padding: $session-margin-xs $session-margin-md;
         margin-bottom: $session-margin-lg;
         outline: none;
@@ -1070,24 +1015,19 @@ label {
     vertical-align: 0px;
     border: 2px solid rgba($session-color-white, 0.6);
     padding: 0.2em;
-    @include themify($themes) {
-      background: none;
-      border-color: themed('accent');
-    }
+    background: none;
+    border-color: var(--color-accent);
+
     background-clip: content-box;
     transition: $session-transition-duration;
   }
 
   input:hover + label:before {
-    @include themify($themes) {
-      background: themed('accent');
-    }
+    background: var(--color-accent);
   }
 
   input:checked + label:before {
-    @include themify($themes) {
-      background: themed('accent');
-    }
+    background: var(--color-accent);
   }
 }
 
@@ -1122,9 +1062,8 @@ input {
 .dark-theme .invite-friends-dialog .member-item {
   height: 64px;
   background-color: $session-shade-4;
-  @include themify($themes) {
-    border: themed('sessionBorder');
-  }
+  border: var(--border-session);
+
   display: flex;
   align-items: center;
   transition: $session-transition-duration;
@@ -1232,16 +1171,13 @@ input {
     width: 40px;
     border-radius: 50%;
     opacity: 1;
-    @include themify($themes) {
-      background-color: themed('cellBackground');
-      box-shadow: themed('sessionShadow');
-    }
+    background-color: var(--color-cell-background);
+    box-shadow: var(--color-session-shadow);
+
     svg path {
       transition: $session-transition-duration;
       opacity: 0.6;
-      @include themify($themes) {
-        fill: themed('textColor');
-      }
+      fill: var(--color-text);
     }
 
     &:hover svg path {
@@ -1256,9 +1192,7 @@ input {
     width: 100%;
     max-height: 400px;
     overflow-y: auto;
-    @include themify($themes) {
-      border: themed('sessionBorder');
-    }
+    border: var(--border-session);
   }
 
   &__selection {
@@ -1269,9 +1203,8 @@ input {
 
   &__no-contacts {
     font-family: $session-font-mono;
-    @include themify($themes) {
-      background: themed('cellBackground');
-    }
+    background: var(--color-cell-background);
+
     text-align: center;
     padding: 20px;
   }
@@ -1303,26 +1236,18 @@ input {
   display: flex;
   justify-content: space-between;
   transition: $session-transition-duration;
-  @include themify($themes) {
-    background: themed('cellBackground');
-  }
+  background: var(--color-cell-background);
 
   &:not(:last-child) {
-    @include themify($themes) {
-      border-bottom: themed('sessionBorder');
-    }
+    border-bottom: var(--border-session);
   }
 
   &:hover {
-    @include themify($themes) {
-      background-color: themed('clickableHovered');
-    }
+    background-color: var(--color-clickable-hovered);
   }
 
   &.selected {
-    @include themify($themes) {
-      background-color: themed('conversationItemSelected') !important;
-    }
+    background-color: var(--color-conversation-item-selected) !important;
   }
 
   &.zombie {
@@ -1336,9 +1261,7 @@ input {
     &.selected {
       opacity: 1;
       svg {
-        @include themify($themes) {
-          fill: themed('accent') !important;
-        }
+        fill: var(--color-accent) !important;
       }
     }
   }
@@ -1352,6 +1275,7 @@ input {
   &__name {
     font-weight: bold;
     margin-inline-start: $session-margin-md;
+    margin-inline-end: $session-margin-md;
   }
   &__pubkey {
     margin-inline-start: 5px;
@@ -1383,17 +1307,14 @@ input {
   opacity: 0.6;
   transition: none;
   &:hover {
-    @include themify($themes) {
-      opacity: 1;
-    }
+    opacity: 1;
   }
+
   .session-button {
     transition: none;
 
     &:hover {
-      @include themify($themes) {
-        color: themed('textColorOpposite');
-      }
+      color: var(--color-text-opposite);
     }
   }
 }
