--- a/stylesheets/_session_group_panel.scss
+++ b/stylesheets/_session_group_panel.scss
@@ -3,11 +3,9 @@
   flex-direction: column;
   height: 100vh;
   width: -webkit-fill-available;
+  background: var(--color-cell-background);
+  border-left: var(--border-session);
 
-  @include themify($themes) {
-    background: themed('leftpaneOverlayBackground');
-    border-left: themed('sessionBorder');
-  }
   align-items: center;
 
   &-header {
@@ -32,11 +30,10 @@
     margin: $session-margin-md 0;
     min-height: 4rem;
     width: inherit;
-    @include themify($themes) {
-      color: themed('textColor');
-      background: themed('cellBackground');
-      border: themed('sessionBorder');
-    }
+    color: var(--color-text);
+    background: var(--color-cell-background);
+    border: var(--border-session);
+
     text-align: center;
     display: none;
   }
@@ -46,21 +43,18 @@
     align-items: center;
     min-height: 3rem;
     font-size: 0.8rem;
-    @include themify($themes) {
-      color: themed('textColor');
-      background: themed('cellBackground');
-      border-top: themed('sessionBorder');
-      border-bottom: themed('sessionBorder');
-    }
+    color: var(--color-text);
+    background: var(--color-cell-background);
+    border-top: var(--border-session);
+    border-bottom: var(--border-session);
+
     width: -webkit-fill-available;
     padding: 0 $session-margin-md;
     transition: $session-transition-duration;
     cursor: pointer;
 
     &:hover {
-      @include themify($themes) {
-        background: themed('clickableHovered');
-      }
+      background: var(--color-clickable-hovered);
     }
   }
 
@@ -77,10 +71,8 @@
     height: $composition-container-height;
     flex-shrink: 0;
     align-items: center;
-    @include themify($themes) {
-      border: none;
-      border-top: themed('sessionBorder');
-    }
+    border: none;
+    border-top: var(--border-session);
   }
 
   .module-empty-state {
@@ -106,9 +98,8 @@
       }
 
       &__tab {
-        @include themify($themes) {
-          color: themed('textColor');
-        }
+        color: var(--color-text);
+
         font-weight: bold;
         font-size: 0.9rem;
         padding: 0.6rem;
@@ -124,9 +115,7 @@
             margin: 0 auto;
             width: 70%;
             padding-top: 0.5rem;
-            @include themify($themes) {
-              border-bottom: themed('sessionUnreadBorder');
-            }
+            border-bottom: var(--border-unread);
           }
         }
       }
