--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -1,27 +1,9 @@
 .session {
-  &-fullscreen {
-    background: var(--color-cell-background);
-
-    overflow-y: auto;
-    height: 100%;
-  }
-
   &-content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-
+    background-color: #f9f9f9;
     &-accent {
-      flex-grow: 1;
-      padding-inline-start: 20px;
-
       &-text {
-        color: var(--color-text);
-
         font-family: $session-font-accent;
-
         .title {
           font-size: 100px;
           font-weight: 700;
@@ -50,17 +32,6 @@
       width: 100%;
       padding-bottom: 20px;
     }
-
-    &-close-button {
-      display: flex;
-      align-items: center;
-    }
-
-    &-session-button {
-      img {
-        width: 30px;
-      }
-    }
   }
 
   &-registration {
@@ -77,63 +48,6 @@
     &__content {
       width: 100%;
       padding-top: 20px;
-
-      &__secret-words {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background: var(--color-input-background);
-
-        padding: $session-margin-sm $session-margin-lg;
-        border-radius: 8px;
-
-        label {
-          margin-bottom: 5px;
-        }
-      }
-
-      & .or {
-        text-align: center;
-      }
-    }
-
-    &__sections {
-      display: flex;
-      flex-grow: 1;
-      flex-direction: column;
-    }
-
-    &__tab-container {
-      display: flex;
-      flex-grow: 0;
-      flex-shrink: 0;
-      cursor: pointer;
-      width: 289px;
-      height: 30px;
-      left: 0;
-      right: 0;
-
-      margin-inline-start: auto;
-      margin-inline-end: auto;
-      background: var(--color-cell-background);
-    }
-
-    &__tab {
-      @include fontAccentBold();
-      width: 100%;
-      padding-bottom: 10px;
-      background-color: transparent;
-      text-align: center;
-      border-bottom: var(--border-session);
-      color: var(--color-text);
-
-      transition: border-color $session-transition-duration linear;
-      line-height: 17px;
-      font-size: 15px;
-
-      &--active {
-        border-bottom: 4px solid var(--color-accent);
-      }
     }
 
     @mixin registration-label-mixin {
@@ -254,8 +168,7 @@
     }
   }
 
-  &-description-long,
-  &-signin-device-pairing-header {
+  &-description-long {
     padding-top: 0;
     padding-bottom: 20px;
     @include session-color-subtle(var(--color-text));
@@ -306,8 +219,4 @@
   @include session-color-subtle(var(--color-text));
 
   font-size: 13px;
-}
-
-.registration-content-centered {
-  text-align: center;
 }
