fix search logic and UI cosmetic fixes

--- a/stylesheets/_quote.scss
+++ b/stylesheets/_quote.scss
@@ -254,6 +254,7 @@
     background-color: $color-white-085;
     padding-inline-start: 8px;
     padding-inline-end: 8px;
+    margin-inline-end: 8px;
   }
 
   &-warning__icon {
