--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -846,6 +846,7 @@
   display: flex;
   flex-direction: row;
   padding-inline-end: 16px;
+  padding-bottom: 8px;
   padding-inline-start: 16px;
   align-items: center;
 
