--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -1281,6 +1281,10 @@ input {
   }
 }
 
+.module-message__text {
+  white-space: pre-wrap;
+}
+
 .session-info-box {
   display: flex;
   flex-direction: column;
