Fix path building (#1903)
* Keep line breaks when message has some new lines

Relates #1758 and #1898 and #1901

* fix link preview cropped when received

* make sure we fetch from seed if we end up with not enough snodes

* try to download recent previews if we just trusted a user

* throw if we need to rebuild path while fetching snode list from snode

* fixup no refecthing of snode list while we are fetching them already

* added test for fetch from db or seed

* fetch snode list from snode every hour

also make sure the path building does not try to get more snodes. It
just throws

* do not drop a path if an opengroup room is down and we get errors  back

* do not throw an error if the snode in error in not in any path

* fix tests

* bump to v1.7.11

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -174,18 +174,12 @@
 
 .module-message__link-preview {
   cursor: pointer;
-  margin-inline-start: -12px;
-  margin-inline-end: -12px;
-  margin-top: -10px;
-  margin-bottom: 5px;
   border-top-left-radius: $session_message-container-border-radius;
   border-top-right-radius: $session_message-container-border-radius;
 }
 
 .module-message__link-preview__content {
   padding: 8px;
-  border-top-left-radius: $session_message-container-border-radius;
-  border-top-right-radius: $session_message-container-border-radius;
   background-color: $color-white;
   display: flex;
   flex-direction: row;
@@ -1027,8 +1021,12 @@
 }
 
 .module-image__image {
-  object-fit: cover;
+  object-fit: contain;
   cursor: pointer;
+
+  &-cover {
+    object-fit: cover;
+  }
 }
 
 .module-image__bottom-overlay {
@@ -1489,9 +1487,10 @@
 
 .module-staged-link-preview--is-loading {
   align-items: center;
+  justify-content: center;
 }
 .module-staged-link-preview__loading {
-  color: var(--color-sent-message-text);
+  color: var(--color-text);
 
   font-size: 14px;
   text-align: center;
