Fix select colors for sent messages and link text not selectable (#1924)
* do not update sent_at for synced messages

* reply to message context menu only visible if msg sent

* Allow scrolling in mentioning people in composition box

Relates #1849

* fix selection colors for sent messages and make link selectable

Relates #1922

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -36,11 +36,11 @@ textarea {
   input,
   textarea {
     user-select: text;
-
-    &::selection {
-      background: var(--color-text-highlight);
-    }
   }
+}
+
+::selection {
+  background: var(--color-text-highlight);
 }
 
 .shadowed {
