show ip of onion path on hover of country name

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -1095,6 +1095,7 @@ input {
   flex-direction: column;
   margin: $session-margin-sm;
   align-items: flex-start;
+  min-width: 10vw;
   position: relative;
 
   .onion__node {
