make sure messages do not take more than 75% of the list width

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -313,11 +313,11 @@ textarea {
 
 .module-message--incoming {
   margin-inline-start: 0;
-  margin-inline-end: 10px;
+  margin-inline-end: auto;
 }
 .module-message--outgoing {
   margin-inline-end: 0;
-  margin-inline-start: 10px;
+  margin-inline-start: auto;
 }
 
 pre {
