add padding to qr code for easy scanning in dark mode
Relates #2004

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -734,6 +734,8 @@ label {
   display: flex;
   justify-content: center;
 
+  background: white;
+  padding: 0.5rem;
   svg {
     width: 135px;
     height: 135px;
