fix video stream not displaying in draggable container

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -170,6 +170,7 @@
   line-height: 16px;
   letter-spacing: 0.3px;
   margin-top: 3px;
+  white-space: nowrap;
 }
 
 .module-message__link-preview {
