--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -888,6 +888,10 @@
   flex-direction: column;
   align-items: stretch;
   overflow: hidden;
+
+  .session-icon-button:first-child {
+    margin-right: $session-margin-sm;
+  }
 }
 
 .module-conversation-list-item__header {
