Minor call tweaks (#2051)
* show missed-call,started-call and answered call notification in chat

* fix types for createLastMessageUpdate

* show incoming dialog if we have a pending call when enable call receptio

* simplify a bit the avatar component

* move disableDrag to a custom hook

* speed up hash colors of avatarPlaceHolders

* fixup text selection and double click reply on message

* keep avatar decoded items longer before releasing memory

* add incoming/outgoing/missed call notification

also, merge that notification with the timer and group notification
component

* hangup call if no answer after 30sec

* refactor SessionInput using hook + add testid field for recovery

* disable message request feature flag for now

* fix merge issue

* force loading screen to be black instead of white

for our dark theme user's eyes safety

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -13,6 +13,7 @@ body {
   margin: 0;
   font-family: $session-font-default;
   font-size: 14px;
+  letter-spacing: 0.3px;
 }
 
 // scrollbars
@@ -230,6 +231,8 @@ $loading-height: 16px;
   display: flex;
   align-items: center;
   user-select: none;
+  // force this to black, to stay consistent with the password prompt being in dark mode too.
+  background-color: black;
 
   .content {
     margin-inline-start: auto;
