Fix attachment dl freeze (#2086)
* fix attachment download freezing app for some opengroups

* make registration page work with smaller height

--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -1,7 +1,10 @@
 .session {
+  &-fullscreen {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
   &-content {
-    background-color: #f9f9f9;
-
     .session-button.brand-outline.brand.green:hover {
       background-color: var(--color-accent);
     }
