Global search partially functioning, added basic functions for load testing performance.

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -1547,7 +1547,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 
-  color: $color-gray-90;
+  color: var(--color-text-subtle);
 }
 
 .module-message-search-result__header__timestamp {
