fixup open convo on search, quote click or hit the bottom

--- a/stylesheets/_quote.scss
+++ b/stylesheets/_quote.scss
@@ -271,6 +271,23 @@
   }
 }
 
+$session-highlight-message-shadow: 0px 0px 10px 1px $session-color-green;
+
+@keyframes remove-box-shadow {
+  0% {
+    box-shadow: $session-highlight-message-shadow;
+  }
+  75% {
+    box-shadow: $session-highlight-message-shadow;
+  }
+  100% {
+    box-shadow: none;
+  }
+}
+
 .flash-green-once {
-  box-shadow: 0px 0px 6px 3px $session-color-green;
+  animation-name: remove-box-shadow;
+  animation-timing-function: linear;
+  animation-duration: 2s;
+  box-shadow: $session-highlight-message-shadow;
 }
