cleanup scroll to unread of quote or search result on open

--- a/stylesheets/_quote.scss
+++ b/stylesheets/_quote.scss
@@ -275,6 +275,9 @@ $session-highlight-message-shadow: 0px 0px 10px 1px $session-color-green;
 
 @keyframes remove-box-shadow {
   0% {
+    box-shadow: none;
+  }
+  10% {
     box-shadow: $session-highlight-message-shadow;
   }
   75% {
