remove 'recipients' message field and 'destination'
we do not need recipients as it makes no sense for us having medium
groups on the same pubkey

we do not need destination as it can always be guessed from the
direction and the type of conversation of that message

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -1421,7 +1421,7 @@
 
   cursor: pointer;
   &:hover {
-    background-color: $color-gray-05;
+    background-color: var(--color-clickable-hovered);
   }
 }
 
