--- a/stylesheets/_session_left_pane.scss
+++ b/stylesheets/_session_left_pane.scss
@@ -132,6 +132,7 @@ $session-compose-margin: 20px;
     align-items: center;
     overflow-y: auto;
     overflow-x: hidden;
+    justify-content: space-between;
 
     .session-icon .exit {
       padding: 13px;
