grunt keep underscore in for backbone

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -6,17 +6,7 @@
   flex-direction: column;
   align-items: flex-start;
   overflow-x: hidden;
-}
-
-.create-group-button {
-  background-color: #383c46;
-  color: #ffffff;
-  margin: 4px;
-  padding: 4px;
-}
-
-.create-group-button:focus {
-  outline: 0;
+  font-weight: 400;
 }
 
 .module-contact-name span {
