--- a/stylesheets/_session_constants.scss
+++ b/stylesheets/_session_constants.scss
@@ -10,32 +10,18 @@ $session-font-mono: 'SpaceMono';
   font-family: $session-font-mono;
   src: url('../fonts/SpaceMono-Regular.ttf') format('truetype');
 }
-@font-face {
-  font-family: $session-font-mono;
-  src: url('../fonts/SpaceMono-Bold.ttf') format('truetype');
-  font-weight: bold;
-}
-@font-face {
-  font-family: $session-font-mono;
-  src: url('../fonts/SpaceMono-Italic.ttf') format('truetype');
-  font-style: italic;
-}
-@font-face {
-  font-family: $session-font-mono;
-  src: url('../fonts/SpaceMono-BoldItalic.ttf') format('truetype');
-  font-weight: bold;
-  font-style: italic;
-}
 
 // Roboto is an open replacement for $session-font-default
 @font-face {
   font-family: $session-font-default;
   src: url('../fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: 300;
 }
 @font-face {
   font-family: $session-font-default;
   src: url('../fonts/Roboto-Italic.ttf') format('truetype');
   font-style: italic;
+  font-weight: 300;
 }
 @font-face {
   font-family: $session-font-default;
